# niimblue.py

./: .buildinfo  .gitignore  README.md  api.html  examples.html  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  quickstart.html  search.html  searchindex.js
.doctrees/: api.doctree  environment.pickle  examples.doctree  index.doctree  installation.doctree  quickstart.doctree
.github/workflows/: docs.yml
_modules/: index.html
_modules/niimblue/: client.html
_sources/: index.rst.txt
docs/: Makefile  api.rst  conf.py  examples.rst  index.rst  installation.rst  quickstart.rst  requirements.txt
niimblue/: __init__.py  client.py
