[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "niimblue.py"
version = "0.1.0"
description = "Python client for NiimBot label printers via the niimblue-cli REST server"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["niimbot", "label", "printer", "bluetooth", "serial"]

dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
pillow = ["Pillow>=9.0"]
docs = [
    "Sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "sphinx-autodoc-typehints>=1.25",
]
dev = [
    "niimblue[pillow,docs]",
    "pytest>=7",
    "pytest-cov",
    "mypy",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/yourorg/niimblue"
Issues = "https://github.com/yourorg/niimblue/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["niimblue*"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "I"]
